# krystalgp

./: .cursorrules  .env.example  .gitignore  CORRECT_BEHAVIOR.md  FINAL_SUMMARY.txt  IMPLEMENTATION_COMPLETE.md  PROJECT_SUMMARY.md  PROMPT_IMPROVEMENTS.md  README.md  STATUS.md  STREAMLIT_STATUS.md  USAGE.md  packages.txt  pyproject.toml  requirements.txt  results.csv  run_streamlit.sh  streamlit_app.py
.streamlit/: secrets.toml.example
data/: ground_truth_labels.csv
docs/: TIE_BREAKING_STRATEGIES.md
sample_emails/: Acquisition Opportunity - Fishing and Seafood Distribution Leader.msg  Acquisition Opportunity - Leading Western Canadian Transportation Services Provider.msg  Acquisition Opportunity - Premium Trailer Manufacturer (Project Prestige).msg  Acquisition Opportunity - Project Cedar.msg  Acquisition Opportunity - Project Thunderbird.msg  Acquisition Opportunity - Water Management - Krystal Growth Partners.msg  Acquisition Opportunity - West Coast Based Metal Composite Panel System Manufacturing and Installation Company.msg  Acquisition Opportunity - West Coast Based Precision Metal Fabrication Company.msg  Acquisition Opportunity _ Leading Distributor of Powersport and Marine Products.msg  Acquisition Opportunity – Leading North American Pet Food Business.msg  Acquisition Opportunity_ Project Hitch.msg  Acquisition Opportunity_ Project Rock.msg  Acquisition Opportunity_ Project Thunder.msg  Avery - Acquisition Opportunity.msg  Avery - Commerical Roofing Contractor Acquisition Opportunity.msg  FW 2025 Estimated $63.4M $5.2M Cold Plunge Sauna Company.msg  (+82 more)
(+26 files in other folders)
